# robot_on_guide_ik_solver

./: CMakeLists.txt  README.md  package.xml  plugin.xml
config/: params.yaml  params.yaml.template
include/robot_on_guide_ik_solver/: robot_on_guide_ik_solver.h
include/robot_on_guide_ik_solver/internal/: math.h
robot_on_guide_ik_solver/: CMakeLists.txt  README.md  package.xml
robot_on_guide_ik_solver/include/robot_on_guide_ik_solver/: math.h  robot_on_guide_ik_solver.h
robot_on_guide_ik_solver/src/robot_on_guide_ik_solver/: math.cpp  robot_on_guide_ik_solver.cpp
robot_on_guide_ik_solver/test/: main.cpp
robot_on_guide_ik_solver_ros/: CMakeLists.txt  package.xml  plugin.xml
robot_on_guide_ik_solver_ros/include/robot_on_guide_ik_solver_ros/: robot_on_guide_ik_solver_ros.h
robot_on_guide_ik_solver_ros/launch/: test.launch
robot_on_guide_ik_solver_ros/src/robot_on_guide_ik_solver_ros/: robot_on_guide_ik_solver_ros.cpp
src/robot_on_guide_ik_solver/: math.cpp  robot_on_guide_ik_solver.cpp
test/: main.cpp
