<?xml version="1.0"?>
<package format="2">
  <name>robot_on_guide_ik_solver</name>
  <version>0.0.0</version>
  <description>The robot_on_guide_ik_solver package</description>

  <maintainer email="manuel.beschi@unibs.it">Manuel Beschi</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ik_solver</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosdyn_core</build_depend>
  <build_export_depend>ik_solver</build_export_depend>
  <build_export_depend>rosdyn_core</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>ik_solver</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rosdyn_core</exec_depend>
  
  <export>
    <ik_solver plugin="${prefix}/plugin.xml"/>
  </export>
</package>
