<?xml version="1.0"?>
<package format="3">
  <name>robot_on_guide_ik_solver</name>
  <version>0.0.0</version>
  <description>The robot_on_guide_ik_solver package</description>

  <maintainer email="manuel.beschi@unibs.it">Manuel Beschi</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ik_solver</depend>
  <depend>rclcpp</depend>
  <depend>rdyn_core</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
